--- a/src/app/style.scss
+++ b/src/app/style.scss
@@ -367,6 +367,7 @@ button:active {
   border-radius: 16px;
   padding: 1rem;
   transition: transform 0.3s ease;
+  width: 250px;
 }
 
 .game-cart:hover {
